--- a/assets/css/styles/components/_extra.scss
+++ b/assets/css/styles/components/_extra.scss
@@ -44,7 +44,7 @@
 
 }
 
-.front,.back{
+.front, .back{
 
   position: absolute;
   background: #2E414C;
@@ -91,14 +91,7 @@
   font-size: 10px;
   padding: 3px;
   border: 3px solid #2E414C;
-
-}
-
-.back a {
-
-	display: block;
-	width: 100%;
-	height: 100%;
+  cursor: pointer;
 
 }
 
