--- a/assets/css/styles/components/_player.scss
+++ b/assets/css/styles/components/_player.scss
@@ -1,193 +1,19 @@
 .player {
-
    height: $player-height;
    width: $player-width;
    background-color: #1E2125;
    @include unselectable();
    margin: auto;
+   margin-bottom: 50px;
    position: relative;
-   top: 100px;
+   top: 200px;
    left: 150px;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
-
-   ul {
-      list-style: none;
-      li {
-         display: inline-block;
-      }
-   }
 }
 
-.cover {
-   position: absolute;
-   top: 0;
-   left: 0;
-   img {
-      height: $player-height;
-      width: $player-height;
-   }
-}
+.widget {
 
-.info {
+   margin-bottom: 100px;
 
-   h1 {
-      margin-top: 15px;
-      margin-left: 180px;
-      line-height: 0;
-      font-size: 20px;
-   }
-
-   h4 {
-      margin-left: 180px;
-      line-height: 20px;
-      color: #636367;
-      font-size: 10px;
-   }
-
-   h2 {
-      margin-left: 180px;
-      font-size: 15px;
-   }
-}
-
-.button-items {
-   margin-left: 180px !important;
-}
-
-#slider {
-	width: 182px;
-	height: 4px;
-	background: #151518;
-   border-radius: 2px;
-   div {
-      width: 4px;
-      height: 4px;
-      margin-top: 1px;
-      background: #EF6DBC;
-      border-radius: 2px;
-   }
-}
-
-#timer {
-   color: #494B4E;
-   line-height: 0;
-   font-size: 9pt;
-   float: right;
-   margin-top: 10px;
-   font-family: Arial, Sans-Serif;
-}
-
-.controls {
-   margin-top: 20px;
-
-   svg:nth-child(2) {
-      margin-left: 5px;
-      margin-right: 5px;
-   }
-}
-
-#play {
-   padding: 0 3px;
-   width: 30px;
-   height: 30px;
-   x: 0px;
-   y: 0px;
-   enable-background: new 0 0 25 25;
-
-   g {
-      stroke: #FEFEFE;
-      stroke-width: 1;
-      stroke-miterlimit: 10;
-
-      path {
-         fill: #FEFEFE;
-      }
-   }
-}
-
-#play:hover {
-   cursor: pointer;
-   g {
-      stroke: #8F4DA9;
-      cursor: pointer;
-
-      path {
-         fill: #9b59b6;
-         cursor: pointer;
-      }
-   }
-}
-
-.step-backward {
-   width: 18px;
-   height: 18px;
-   x: 0px;
-   y: 0px;
-   enable-background: new 0 0 25 25;
-   margin-bottom: 5px;
-
-   g polygon {
-      fill: #FEFEFE;
-   }
-}
-
-.step-forward {
-   width: 18px;
-   height: 18px;
-   x: 0px;
-   y: 0px;
-   enable-background: new 0 0 25 25;
-   margin-bottom: 5px;
-
-   g polygon {
-      fill: #FEFEFE;
-   }
-}
-
-#pause {
-   x: 0px;
-   y: 0px;
-   enable-background: new 0 0 25 25;
-   width: 30px;
-   height: 30px;
-   position: absolute;
-   margin-left: -45px;
-   cursor: pointer;
-
-   rect {
-      fill: white;
-   }
-}
-
-#pause:hover rect {
-   fill: #8F4DA9;
-}
-
-.step-backward g polygon:hover, .step-forward g polygon:hover {
-   fill: #EF6DBC;
-   cursor: pointer;
-}
-
-#skip {
-  float: right;
-  margin-top: 10px;
-  
-  p {
-    color: #2980b9;
-  }
-  
-  p:hover {
-    color: #e74c3c;
-    cursor: pointer;
-  }
-}
-
-.expend {
-   padding: 0.5px;
-   cursor: pointer;
-   
-   svg:hover g polygon {
-      fill: #EF6DBC;
-   }
 }
